--- a/style.css
+++ b/style.css
@@ -46,6 +46,53 @@
     margin-top: 20px;
 }
 
-#NextButton {
+Button {
     font: 16px "open-sans", sans-serif;
+}
+
+#overlay {
+    position: fixed;
+    display: none;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-color: rgba(0,0,0,0.75);
+    z-index: 2;
+    padding-top: 50px;
+}
+
+#CardOverlay {
+    display: grid;
+    grid-template-columns: auto;
+    width: 30%;
+    margin: 0 auto;
+}
+
+.CardFront {
+    aspect-ratio: 3 / 4;
+    margin: 10px;
+}
+
+#TextOverlay {
+    color: white;
+    margin-top: 30px;
+    margin-bottom: 30px;
+}
+
+.CardTitle {
+    display: table;
+    margin: 0 auto;
+    margin-bottom: 30px;
+    font: 48px "open-sans", sans-serif;
+}
+
+.CardDescription {
+    display: table;
+    margin: 0 auto;
+    font: 24px "open-sans", sans-serif;
+    width: 50%;
+    text-align: center;
 }
